# ChaosCommand

./: .gitignore  HANDOFF-ace-to-ace-megachonk-session.md  HANDOFF-tauri-flask-bridge.md  LICENSE  MOBILE_BUILD_DEBUG.md  NEURO_CROSSLIST_SPEC.md  Needed_Fixes.md  QA-HANDOFF.md  README.md  REMAINING-TYPESCRIPT-FIXES.md  ROADMAP.md  TRACKER_REFUN_2026_05_15.md  VISION.md  flirtingAI.md  minor-bugs.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  type-errors.md  version-0.4.95.json  version-0.5.0.json  version-0.5.1.json  version-0.5.2.json
app/: globals.css  layout.tsx  page.tsx
backend/: app.py  chaos-command-backend.spec  document_parser.py  medical_nlp.py  pdf_export.py  requirements.txt  spacy_medical_parser.py  spacy_medical_parser.py.OLD  terminology_mapper.py  text_extractor.py
components/: add-to-calendar-button.tsx  app-sidebar.tsx  app-wrapper.tsx  backup-reminder-banner.tsx  calendar-sidebar.tsx  daily-prompts.tsx  document-uploader.tsx  emergency-criteria-card.tsx  entry-datetime-picker.tsx  graph-analytics.tsx  hidden-custom-trackers-panel.tsx  konami-easter-egg.tsx  lab-parser-diagnostics-panel.tsx  license-gate.tsx  medical-disclaimer-bar.tsx  medical-timeline.tsx  personalization-welcome.tsx  pin-login.tsx  reminder-ticker.tsx  survival-button.tsx  tag-input.tsx  test-pin-manager.tsx  text-parser.tsx  theme-loader.tsx  user-tags-manager.tsx
docs/: CHANGELOG.md  HOW_TO_BUILD_A_TRACKER.md  IOS_BUILD.md  changelog.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs  peers.rs  server.rs  sync.rs
(+581 files in other folders)
