[package]
name = "app"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Legacy Polar sandbox flag — retained in case we ever switch BACK to a
# hosted license server. Current v1 uses offline Ed25519 signed keys
# (no network required). See src/license.rs.
sandbox = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2.4", features = ["sqlite"] }
tauri-plugin-opener = "2.5"
tauri-plugin-http = "2"

tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hostname = "0.4"

# Offline license-key validation via Ed25519 signatures (no network needed)
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
base64 = "0.22"

# Auto-sync persistent server: HMAC-SHA256 auth on /sync, secure RNG for
# peer_ids and shared secrets. All four are already transitive deps via
# tauri/ed25519-dalek/etc — declared explicitly so the new modules can use them.
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
getrandom = "0.2"
